--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -1,11 +1,13 @@
 sink.cassandra=docker:springcloudstream/cassandra-sink-kafka:@cassandra-sink-docker.tag@
 sink.counter=docker:springcloudstream/counter-sink-kafka:@counter-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-kafka:@file-sink-docker.tag@
+sink.ftp=docker:springcloudstream/ftp-sink-kafka:@ftp-sink-docker.tag@
 sink.jdbc=docker:springcloudstream/jdbc-sink-kafka:@jdbc-sink-docker.tag@
 sink.log=docker:springcloudstream/log-sink-kafka:@log-sink-docker.tag@
 sink.mongodb=docker:springcloudstream/mongodb-sink-kafka:@mongodb-sink-docker.tag@
 sink.rabbit=docker:springcloudstream/rabbit-sink-kafka:@rabbit-sink-docker.tag@
 sink.redis=docker:springcloudstream/redis-sink-kafka:@redis-sink-docker.tag@
+sink.sftp=docker:springcloudstream/sftp-sink-kafka:@sftp-sink-docker.tag@
 source.file=docker:springcloudstream/file-source-kafka:@file-source-docker.tag@
 source.http=docker:springcloudstream/http-source-kafka:@http-source-docker.tag@
 source.jdbc=docker:springcloudstream/jdbc-source-kafka:@jdbc-source-docker.tag@
