--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -1,11 +1,13 @@
 sink.cassandra=docker:springcloudstream/cassandra-sink-rabbit:@cassandra-sink-docker.tag@
 sink.counter=docker:springcloudstream/counter-sink-rabbit:@counter-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-rabbit:@file-sink-docker.tag@
+sink.ftp=docker:springcloudstream/ftp-sink-rabbit:@ftp-sink-docker.tag@
 sink.jdbc=docker:springcloudstream/jdbc-sink-rabbit:@jdbc-sink-docker.tag@
 sink.log=docker:springcloudstream/log-sink-rabbit:@log-sink-docker.tag@
 sink.mongodb=docker:springcloudstream/mongodb-sink-rabbit:@mongodb-sink-docker.tag@
 sink.rabbit=docker:springcloudstream/rabbit-sink-rabbit:@rabbit-sink-docker.tag@
 sink.redis=docker:springcloudstream/redis-sink-rabbit:@redis-sink-docker.tag@
+sink.sftp=docker:springcloudstream/sftp-sink-rabbit:@sftp-sink-docker.tag@
 source.file=docker:springcloudstream/file-source-rabbit:@file-source-docker.tag@
 source.http=docker:springcloudstream/http-source-rabbit:@http-source-docker.tag@
 source.jdbc=docker:springcloudstream/jdbc-source-rabbit:@jdbc-source-docker.tag@
