--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
@@ -4,6 +4,8 @@ sink.counter=https://@repo-spring-io@/org/springframework/cloud/stream/app/count
 sink.counter.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/counter-sink-rabbit/@counter-sink.version@/counter-sink-rabbit-@counter-sink.version@-metadata.jar
 sink.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-rabbit/@file-sink.version@/file-sink-rabbit-@file-sink.version@.jar
 sink.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-rabbit/@file-sink.version@/file-sink-rabbit-@file-sink.version@-metadata.jar
+sink.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-rabbit/@ftp-sink.version@/ftp-sink-rabbit-@ftp-sink.version@.jar
+sink.ftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-rabbit/@ftp-sink.version@/ftp-sink-rabbit-@ftp-sink.version@-metadata.jar
 sink.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-sink-rabbit/@jdbc-sink.version@/jdbc-sink-rabbit-@jdbc-sink.version@.jar
 sink.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-sink-rabbit/@jdbc-sink.version@/jdbc-sink-rabbit-@jdbc-sink.version@-metadata.jar
 sink.log=https://@repo-spring-io@/org/springframework/cloud/stream/app/log-sink-rabbit/@log-sink.version@/log-sink-rabbit-@log-sink.version@.jar
@@ -14,6 +16,8 @@ sink.rabbit=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit
 sink.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-rabbit/@rabbit-sink.version@/rabbit-sink-rabbit-@rabbit-sink.version@-metadata.jar
 sink.redis=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-rabbit/@redis-sink.version@/redis-sink-rabbit-@redis-sink.version@.jar
 sink.redis.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-rabbit/@redis-sink.version@/redis-sink-rabbit-@redis-sink.version@-metadata.jar
+sink.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-rabbit/@sftp-sink.version@/sftp-sink-rabbit-@sftp-sink.version@.jar
+sink.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-rabbit/@sftp-sink.version@/sftp-sink-rabbit-@sftp-sink.version@-metadata.jar
 source.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-rabbit/@file-source.version@/file-source-rabbit-@file-source.version@.jar
 source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-rabbit/@file-source.version@/file-source-rabbit-@file-source.version@-metadata.jar
 source.http=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-rabbit/@http-source.version@/http-source-rabbit-@http-source.version@.jar
