--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -4,6 +4,8 @@ sink.counter=maven://org.springframework.cloud.stream.app:counter-sink-kafka:@co
 sink.counter.metadata=maven://org.springframework.cloud.stream.app:counter-sink-kafka:jar:metadata:@counter-sink.version@
 sink.file=maven://org.springframework.cloud.stream.app:file-sink-kafka:@file-sink.version@
 sink.file.metadata=maven://org.springframework.cloud.stream.app:file-sink-kafka:jar:metadata:@file-sink.version@
+sink.ftp=maven://org.springframework.cloud.stream.app:ftp-sink-kafka:@ftp-sink.version@
+sink.ftp.metadata=maven://org.springframework.cloud.stream.app:ftp-sink-kafka:jar:metadata:@ftp-sink.version@
 sink.jdbc=maven://org.springframework.cloud.stream.app:jdbc-sink-kafka:@jdbc-sink.version@
 sink.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-sink-kafka:jar:metadata:@jdbc-sink.version@
 sink.log=maven://org.springframework.cloud.stream.app:log-sink-kafka:@log-sink.version@
@@ -14,6 +16,8 @@ sink.rabbit=maven://org.springframework.cloud.stream.app:rabbit-sink-kafka:@rabb
 sink.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-sink-kafka:jar:metadata:@rabbit-sink.version@
 sink.redis=maven://org.springframework.cloud.stream.app:redis-sink-kafka:@redis-sink.version@
 sink.redis.metadata=maven://org.springframework.cloud.stream.app:redis-sink-kafka:jar:metadata:@redis-sink.version@
+sink.sftp=maven://org.springframework.cloud.stream.app:sftp-sink-kafka:@sftp-sink.version@
+sink.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-sink-kafka:jar:metadata:@sftp-sink.version@
 source.file=maven://org.springframework.cloud.stream.app:file-source-kafka:@file-source.version@
 source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-kafka:jar:metadata:@file-source.version@
 source.http=maven://org.springframework.cloud.stream.app:http-source-kafka:@http-source.version@
