--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -4,6 +4,8 @@ sink.counter=maven://org.springframework.cloud.stream.app:counter-sink-rabbit:@c
 sink.counter.metadata=maven://org.springframework.cloud.stream.app:counter-sink-rabbit:jar:metadata:@counter-sink.version@
 sink.file=maven://org.springframework.cloud.stream.app:file-sink-rabbit:@file-sink.version@
 sink.file.metadata=maven://org.springframework.cloud.stream.app:file-sink-rabbit:jar:metadata:@file-sink.version@
+sink.ftp=maven://org.springframework.cloud.stream.app:ftp-sink-rabbit:@ftp-sink.version@
+sink.ftp.metadata=maven://org.springframework.cloud.stream.app:ftp-sink-rabbit:jar:metadata:@ftp-sink.version@
 sink.jdbc=maven://org.springframework.cloud.stream.app:jdbc-sink-rabbit:@jdbc-sink.version@
 sink.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-sink-rabbit:jar:metadata:@jdbc-sink.version@
 sink.log=maven://org.springframework.cloud.stream.app:log-sink-rabbit:@log-sink.version@
@@ -14,6 +16,8 @@ sink.rabbit=maven://org.springframework.cloud.stream.app:rabbit-sink-rabbit:@rab
 sink.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-sink-rabbit:jar:metadata:@rabbit-sink.version@
 sink.redis=maven://org.springframework.cloud.stream.app:redis-sink-rabbit:@redis-sink.version@
 sink.redis.metadata=maven://org.springframework.cloud.stream.app:redis-sink-rabbit:jar:metadata:@redis-sink.version@
+sink.sftp=maven://org.springframework.cloud.stream.app:sftp-sink-rabbit:@sftp-sink.version@
+sink.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-sink-rabbit:jar:metadata:@sftp-sink.version@
 source.file=maven://org.springframework.cloud.stream.app:file-source-rabbit:@file-source.version@
 source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-rabbit:jar:metadata:@file-source.version@
 source.http=maven://org.springframework.cloud.stream.app:http-source-rabbit:@http-source.version@
