MQTT source as supplier/source
Resolves https://github.com/spring-cloud/stream-applications/issues/38

--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -13,6 +13,7 @@
         <module>file-source</module>
         <module>jdbc-source</module>
         <module>http-source</module>
+        <module>mqtt-source</module>
         <module>time-source</module>
         <module>load-generator-source</module>
         <module>mongodb-source</module>
