--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -55,6 +55,7 @@
 		<module>consumer/jdbc-consumer</module>
 		<module>consumer/log-consumer</module>
 		<module>consumer/mongodb-consumer</module>
+		<module>consumer/mqtt-consumer</module>
 		<module>consumer/rabbit-consumer</module>
 		<module>consumer/redis-consumer</module>
 		<module>consumer/sftp-consumer</module>
