--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -61,6 +61,7 @@
 
 		<module>function/filter-function</module>
 		<module>function/header-enricher-function</module>
+		<module>function/http-request-function</module>
 		<module>function/spel-function</module>
 		<module>function/payload-converter-function</module>
 		<module>function/splitter-function</module>
