TCP Supplier/Source
Resolves https://github.com/spring-cloud/stream-applications/issues/43

--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -15,5 +15,6 @@
         <module>http-source</module>
         <module>time-source</module>
         <module>mongodb-source</module>
+        <module>tcp-source</module>
     </modules>
 </project>
