--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -42,6 +42,7 @@
   	<modules>
 		<module>common/ftp-common</module>
 		<module>common/function-test-support</module>
+		<module>common/tcp-common</module>
 
 		<module>consumer/cassandra-consumer</module>
 		<module>consumer/counter-consumer</module>
@@ -64,6 +65,7 @@
 		<module>supplier/http-supplier</module>
 		<module>supplier/jdbc-supplier</module>
 		<module>supplier/mongodb-supplier</module>
+		<module>supplier/tcp-supplier</module>
 		<module>supplier/time-supplier</module>
 
 		<module>spring-functions-parent</module>
