--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -12,13 +12,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.0.M4</version>
+        <version>2.3.0.RELEASE</version>
     </parent>
 
     <properties>
         <java.version>1.8</java.version>
-        <stream-apps-core.version>3.0.0.M2</stream-apps-core.version>
-        <spring-boot.version>2.3.0.M4</spring-boot.version>
+        <stream-apps-core.version>3.0.0-SNAPSHOT</stream-apps-core.version>
+        <spring-boot.version>2.3.0.RELEASE</spring-boot.version>
         <app-metadata-maven-plugin-version>2.0.1.M1</app-metadata-maven-plugin-version>
         <scst-app-maven-plugin.version>2.0.0.M2</scst-app-maven-plugin.version>
         <stream-apps-docs-plugin.version>3.0.0.M1</stream-apps-docs-plugin.version>
@@ -26,7 +26,7 @@
         <spring-cloud-function-dependencies.version>3.0.2.RELEASE</spring-cloud-function-dependencies.version>
         <spring-cloud-dependencies.version>Hoxton.SR2</spring-cloud-dependencies.version>
         <spring-cloud-stream-dependencies.version>Horsham.SR2</spring-cloud-stream-dependencies.version>
-        <java-cfenv-boot.version>2.1.1.RELEASE</java-cfenv-boot.version>
+        <java-cfenv-boot.version>2.1.2.RELEASE</java-cfenv-boot.version>
         <java-functions.version>1.0.0-SNAPSHOT</java-functions.version>
         <prometheus-rsocket.version>0.9.0</prometheus-rsocket.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
@@ -251,12 +251,12 @@
                         <globalDependencies>
                             <dependency>
                                 <groupId>org.springframework.cloud.stream.app</groupId>
-                                <artifactId>stream-apps-security-common</artifactId>
+                                <artifactId>stream-applications-security-common</artifactId>
                                 <version>${stream-apps-core.version}</version>
                             </dependency>
                             <dependency>
                                 <groupId>org.springframework.cloud.stream.app</groupId>
-                                <artifactId>stream-apps-micrometer-common</artifactId>
+                                <artifactId>stream-applications-micrometer-common</artifactId>
                                 <version>${stream-apps-core.version}</version>
                             </dependency>
                             <dependency>
@@ -266,6 +266,10 @@
                             <dependency>
                                 <groupId>io.micrometer</groupId>
                                 <artifactId>micrometer-registry-prometheus</artifactId>
+                            </dependency>
+                            <dependency>
+                                <groupId>io.micrometer</groupId>
+                                <artifactId>micrometer-registry-wavefront</artifactId>
                             </dependency>
                             <dependency>
                                 <groupId>io.micrometer.prometheus</groupId>
