--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -21,6 +21,7 @@
         <module>rabbit-sink</module>
         <module>router-sink</module>
         <module>sftp-sink</module>
+        <module>tcp-sink</module>
         <module>throughput-sink</module>
     </modules>
 </project>
