--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -54,6 +54,7 @@
 		<module>consumer/rabbit-consumer</module>
 		<module>consumer/redis-consumer</module>
 		<module>consumer/sftp-consumer</module>
+		<module>consumer/tcp-consumer</module>
 
 		<module>function/filter-function</module>
 		<module>function/header-enricher-function</module>
