--- a/applications/source/time-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/time-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,2 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.fn.supplier.time.TimeProperties,\
+configuration-properties.classes=org.springframework.cloud.fn.supplier.time.TimeSupplierProperties,\
   org.springframework.cloud.stream.config.DefaultPollerProperties
