--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -24,14 +24,15 @@
 		<maven-checkstyle-plugin.failOnViolation>true</maven-checkstyle-plugin.failOnViolation>
 		<maven-checkstyle-plugin.includeTestSourceDirectory>true</maven-checkstyle-plugin.includeTestSourceDirectory>
 		<puppycrawl-tools-checkstyle.version>8.29</puppycrawl-tools-checkstyle.version>
+		<checkstyle.location>../etc/checkstyle</checkstyle.location>
 		<checkstyle.suppressions.file>
-			https://raw.githubusercontent.com/spring-cloud/spring-cloud-build/master/spring-cloud-build-tools/src/checkstyle/checkstyle-suppressions.xml
+			${checkstyle.location}/checkstyle-suppressions.xml
 		</checkstyle.suppressions.file>
 		<checkstyle.nohttp.file>
-			https://raw.githubusercontent.com/spring-cloud/spring-cloud-build/master/spring-cloud-build-tools/src/checkstyle/nohttp-checkstyle.xml
+			${checkstyle.location}/nohttp-checkstyle.xml
 		</checkstyle.nohttp.file>
 		<checkstyle.additional.suppressions.file>
-			https://raw.githubusercontent.com/spring-cloud/spring-cloud-build/master/spring-cloud-build-tools/src/checkstyle/checkstyle-suppressions.xml
+			${checkstyle.location}/checkstyle-suppressions.xml
 		</checkstyle.additional.suppressions.file>
 		<nohttp-checkstyle.version>0.0.2.RELEASE</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
@@ -179,8 +180,8 @@
 						<inherited>true</inherited>
 						<configuration>
 							<skip>${disable.checks}</skip>
-							<configLocation>checkstyle.xml</configLocation>
-							<headerLocation>checkstyle-header.txt</headerLocation>
+							<configLocation>${checkstyle.location}/checkstyle.xml</configLocation>
+							<headerLocation>${checkstyle.location}/checkstyle-header.txt</headerLocation>
 							<propertyExpansion>
 								checkstyle.build.directory=${project.build.directory}
 								checkstyle.suppressions.file=${checkstyle.suppressions.file}
