--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>geode-source</module>
         <module>file-source</module>
         <module>jdbc-source</module>
         <module>http-source</module>
