Implement geode-supplier and geode-source along with common config and test support
Implement geodeCqSupplier

Implement Geode CQ Source

Implement Geode Sink

Removed @TestInstance

Combine CQ Source and Source

Clean up per review

Update README

Fix Javadoc

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -14,6 +14,7 @@
         <module>counter-sink</module>
         <module>file-sink</module>
         <module>ftp-sink</module>
+        <module>geode-sink</module>
         <module>log-sink</module>
         <module>mongodb-sink</module>
         <module>mqtt-sink</module>
