--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -72,6 +72,7 @@
 		<module>supplier/mqtt-supplier</module>
 		<module>supplier/tcp-supplier</module>
 		<module>supplier/time-supplier</module>
+		<module>supplier/rabbit-supplier</module>
 
 		<module>spring-functions-parent</module>
 	</modules>
