--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -71,6 +71,7 @@
 
 		<module>supplier/file-supplier</module>
 		<module>supplier/geode-supplier</module>
+		<module>supplier/geode-cq-supplier</module>
 		<module>supplier/http-supplier</module>
 		<module>supplier/jdbc-supplier</module>
 		<module>supplier/mongodb-supplier</module>
