--- a/applications/source/geode-cq-source/pom.xml
+++ b/applications/source/geode-cq-source/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>geode-source</artifactId>
+    <artifactId>geode-cq-source</artifactId>
     <version>3.0.0-SNAPSHOT</version>
-    <name>geode-source</name>
-    <description>Geode source app</description>
+    <name>geode-cq-source</name>
+    <description>geode continuous query source app</description>
     <packaging>jar</packaging>
 
     <parent>
@@ -19,7 +19,7 @@
 
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
-            <artifactId>geode-supplier</artifactId>
+            <artifactId>geode-cq-supplier</artifactId>
             <version>${java-functions.version}</version>
         </dependency>
 
@@ -58,13 +58,13 @@
                         <name>geode</name>
                         <type>source</type>
                         <version>${project.version}</version>
-                        <configClass>org.springframework.cloud.fn.supplier.geode.GeodeSupplierConfiguration.class</configClass>
-                        <functionDefinition>geodeSupplier</functionDefinition>
+                        <configClass>org.springframework.cloud.fn.supplier.geode.cq.GeodeCqSupplierConfiguration.class</configClass>
+                        <functionDefinition>geodeCqSupplier</functionDefinition>
                     </generatedApp>
                     <dependencies>
                         <dependency>
                             <groupId>org.springframework.cloud.fn</groupId>
-                            <artifactId>geode-supplier</artifactId>
+                            <artifactId>geode-cq-supplier</artifactId>
                             <version>${java-functions.version}</version>
                         </dependency>
                     </dependencies>
