--- a/applications/source/http-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/http-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,3 +1,3 @@
-configuration-properties.classes=org.springframework.cloud.fn.supplier.http.HttpSourceProperties,\
-  org.springframework.cloud.fn.supplier.http.HttpSourceProperties$Cors
+configuration-properties.classes=org.springframework.cloud.fn.supplier.http.HttpSupplierProperties,\
+  org.springframework.cloud.fn.supplier.http.HttpSupplierProperties$Cors
 configuration-properties.names=server.port
