--- a/functions/spring-functions-parent/pom.xml
+++ b/functions/spring-functions-parent/pom.xml
@@ -15,7 +15,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<spring-boot.version>2.3.0.M4</spring-boot.version>
+		<spring-boot.version>2.3.0.RELEASE</spring-boot.version>
 		<spring-cloud-function.version>3.0.3.RELEASE</spring-cloud-function.version>
 	</properties>
 	<dependencyManagement>
