--- a/functions/supplier/http-supplier/pom.xml
+++ b/functions/supplier/http-supplier/pom.xml
@@ -28,6 +28,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
